--- a/1.1 Урок 1.md
+++ b/1.1 Урок 1.md
@@ -1,7 +1,7 @@
-# 1.1 Lesson 1
+# 1.1 Урок 1
 
 | Сертификат :  |Linux Essentials                            |
-|:------------- |:------------------------------------------:|
+|:------------- |:-------------------------------------------|
 | Версия :      | 1.6                                        |
 | Тема :        | 1 Сообщество Linux и карьера в Open Source |
 | Цель:         | 1.1 Развитие Linux и популярные ОС         |
