--- a/1.1 Урок 1.md
+++ b/1.1 Урок 1.md
@@ -6,3 +6,17 @@
 | Тема :        | 1 Сообщество Linux и карьера в Open Source |
 | Цель:         | 1.1 Развитие Linux и популярные ОС         |
 | Урок:         | 1 из 1                                     |
+
+# Введение
+
+Lunux одна из самых популярных операционных сситем. Ее разаработка начата в 1991 году Линусом Торвальдсом. Эта ОС была вдохновлена Unix, другой операционной системой разработанной в 1970 году в лаборатории AT&T. Unix была предназаначена для малых компьютеров. В то время "малые" компьтеры считались машины которые не нуждались в больших помещениях с воздушным кондиционированием и столимостью менее  одного миллиона долларов. Чуть позже это были машины, которые смогуть поднять 2 человека. В то время Unix не был доступен для ПК на платформа x86. К тому времени Линус, который в то время был студентом, начал разрабатывать Unix-подобную ОС с поддержкой работы на этой платформе.
+По большей части Linux использует теже принципы и базовые идеи, что и Unix, но сам Linux не содержт в себе кода Unix, так как это не зависимый проект. Linux поддерживатся не отдельной компанией, а международным сообществом программистов. Поскольку он находится в свободном доступе, его может использовать кто угодно без ограничений.
+
+# Дистрибутивы
+
+*Дистрибутивы* Linux это комплект, состоящий из *ядра* и набора приложений, поддерживаемых компанией или сообществом пользователей. Цель дистрибутива является оптимизация ядра и приложений работающих в ОС, для определенного варианта использования или группы пользователей. Дистрибутивы часто включают специальные инструменты для установки программного обеспечения и системного администрирования. Вот почему некоторые дистрибутивы в основном используются для настольных сред, где они должны быть простыми в использовании, в то время как другие в основном используются для запуска на серверах, чтобы максимально эффективно использовать доступные ресурсы.
+Другой способ классификации дистрибутивов - это отсылка к *семейству дистрибутивов*, к которому они принадлежат. Дистрибутивы семейства дистрибутивов Debian используют менеджер пакетов dpkg для управления программным обеспечением, работающим в операционной системе. Пакеты, которые можно установить с помощью диспетчера пакетов, поддерживаются добровольными членами сообщества дистрибутива. Сопровождающие используют формат пакета deb, чтобы указать, как программное обеспечение устанавливается в операционной системе и как оно настраивается по умолчанию. Как и дистрибутив, пакет представляет собой набор программного обеспечения, соответствующей конфигурации и документации, которые упрощают пользователю установку, обновление и использование программного обеспечения.
+Дистрибутив *Debian GNU / Linux* - самый крупный дистрибутив семейства дистрибутивов Debian. Проект Debian GNU / Linux был запущен Яном Мердоком в 1993 году. Сегодня над проектом работают тысячи волонтеров. Debian GNU / Linux стремится предоставить очень надежную операционную систему. Он также продвигает видение операционной системы Ричарда Столлмана, которое уважает свободу пользователя запускать, изучать, распространять и улучшать программное обеспечение. Вот почему по умолчанию он не предоставляет никакого проприетарного программного обеспечения.
+*Ubuntu* - еще один дистрибутив на основе Debian, о котором стоит упомянуть. Ubuntu был создан Марком Шаттлвортом и его командой в 2004 году с целью создания простой в использовании ОС Linux для настольных ПК. Миссия Ubuntu - предоставить бесплатное программное обеспечение всем во всем мире, а также снизить стоимость профессиональных услуг. Релиз дистрибутива планово выпускается каждые шесть месяцев с долгосрочной поддержкой в 2 года.
+*Red Hat* - это дистрибутив Linux, разработанный и поддерживаемый компанией-разработчиком программного обеспечения с одноименным названием, которая была приобретена IBM в 2019 году.
+
