--- a/1.1 Урок 1.md
+++ b/1.1 Урок 1.md
@@ -1,7 +1,7 @@
 # 1.1 Урок 1
 
 | Сертификат :  |Linux Essentials                            |
-|:------------- |:-------------------------------------------|
+|:--------------|:-------------------------------------------|
 | Версия :      | 1.6                                        |
 | Тема :        | 1 Сообщество Linux и карьера в Open Source |
 | Цель:         | 1.1 Развитие Linux и популярные ОС         |
@@ -9,10 +9,10 @@
 
 
 # Введение
+:-:
+Lunux одна из самых популярных операционных систем. Ее разаработка начата в 1991 году Линусом Торвальдсом. Эта ОС была вдохновлена Unix, другой операционной системой разработанной в 1970 году в лаборатории AT&T. Unix была предназаначена для малых компьютеров. В то время "малые" компьтеры считались машины которые не нуждались в больших помещениях с воздушным кондиционированием и стоимостью менее одного миллиона долларов. Чуть позже это были машины, которые смогуть поднять 2 человека. В то время Unix не был доступен для ПК на платформе x86. К тому времени Линус, который в то время был студентом, начал разрабатывать Unix-подобную ОС с поддержкой работы на этой платформе.
 
-Lunux одна из самых популярных операционных сситем. Ее разаработка начата в 1991 году Линусом Торвальдсом. Эта ОС была вдохновлена Unix, другой операционной системой разработанной в 1970 году в лаборатории AT&T. Unix была предназаначена для малых компьютеров. В то время "малые" компьтеры считались машины которые не нуждались в больших помещениях с воздушным кондиционированием и столимостью менее  одного миллиона долларов. Чуть позже это были машины, которые смогуть поднять 2 человека. В то время Unix не был доступен для ПК на платформа x86. К тому времени Линус, который в то время был студентом, начал разрабатывать Unix-подобную ОС с поддержкой работы на этой платформе.
-
-По большей части Linux использует теже принципы и базовые идеи, что и Unix, но сам Linux не содержт в себе кода Unix, так как это не зависимый проект. Linux поддерживатся не отдельной компанией, а международным сообществом программистов. Поскольку он находится в свободном доступе, его может использовать кто угодно без ограничений.
+По большей части Linux использует теже принципы и базовые идеи, что и Unix, но сам Linux не содержит в себе кода Unix, так как это не зависимый проект. Linux поддерживатся не отдельной компанией, а международным сообществом программистов. Поскольку он находится в свободном доступе, его может использовать кто угодно без ограничений.
 
 
 # Дистрибутивы
