Update 1.1 Урок 1.md

--- a/1.1 Урок 1.md
+++ b/1.1 Урок 1.md
@@ -11,11 +11,10 @@
 # Введение
 <p align="justify">
 Lunux одна из самых популярных операционных систем. Ее разаработка начата в 1991 году Линусом Торвальдсом. Эта ОС была вдохновлена Unix, другой операционной системой разработанной в 1970 году в лаборатории AT&T. Unix была предназаначена для малых компьютеров. В то время "малые" компьтеры считались машины которые не нуждались в больших помещениях с воздушным кондиционированием и стоимостью менее одного миллиона долларов. Чуть позже это были машины, которые смогуть поднять 2 человека. В то время Unix не был доступен для ПК на платформе x86. К тому времени Линус, который в то время был студентом, начал разрабатывать Unix-подобную ОС с поддержкой работы на этой платформе.
-
-
+</p>
+<p align="justify">
 По большей части Linux использует теже принципы и базовые идеи, что и Unix, но сам Linux не содержит в себе кода Unix, так как это не зависимый проект. Linux поддерживатся не отдельной компанией, а международным сообществом программистов. Поскольку он находится в свободном доступе, его может использовать кто угодно без ограничений.
 </p>
-
 # Дистрибутивы
 <p align="justify">
 *Дистрибутивы* Linux это комплект, состоящий из *ядра* и набора приложений, поддерживаемых компанией или сообществом пользователей. Цель дистрибутива является оптимизация ядра и приложений работающих в ОС, для определенного варианта использования или группы пользователей. Дистрибутивы часто включают специальные инструменты для установки программного обеспечения и системного администрирования. Вот почему некоторые дистрибутивы в основном используются для настольных сред, где они должны быть простыми в использовании, в то время как другие в основном используются для запуска на серверах, чтобы максимально эффективно использовать доступные ресурсы.
