Update 1.1 Урок 1.md

--- a/1.1 Урок 1.md
+++ b/1.1 Урок 1.md
@@ -116,8 +116,9 @@ Linux обычно предлагается как часть предложен
 
 
 # Ответы на упражнения
-
+<p align="justify">
 1. Чем Debian GNU / Linux отличается от Ubuntu? Назовите два аспекта.
+2. </p>
 <p align="justify">
 Ubuntu основан на Debian, поэтому между ними много общего. Однако между ними все же есть существенные различия. Первый вариант подходит для новичков. Ubuntu рекомендуется новичкам из-за простоты использования, а Debian рекомендуется для более продвинутых пользователей. Основное отличие заключается в сложности пользовательской конфигурации, которая не требуется Ubuntu в процессе установки.
 </p>
@@ -141,8 +142,9 @@ Ubuntu основан на Debian, поэтому между ними много
 </p>
 
 # Ответы на расширенные упражнения
-
+<p align="justify">
 1. Учитывая стоимость и производительность, какие дистрибутивы наиболее подходят для бизнеса, который стремится снизить затраты на лицензирование при сохранении максимальной производительности? Объяснить, почему.
+</p>
 <p align="justify">
 CentOS - один из наиболее подходящих дистрибутивов для использования в бизнесе. Это потому, что он включает в себя все продукты Red Hat, которые в дальнейшем используются в их коммерческих операционных системах, но при этом являются бесплатными. Точно так же выпуски Ubuntu LTS гарантируют поддержку в течение более длительного периода времени. Стабильные версии Debian GNU / Linux также часто используются в корпоративных средах.
 </p>
