Update 1.1 Урок 1.md

--- a/Linux Essentials/Topic1: The Linux Community and a Career in Open Source/1.1 Урок 1.md
+++ b/Linux Essentials/Topic1: The Linux Community and a Career in Open Source/1.1 Урок 1.md
@@ -80,7 +80,7 @@ Raspberry Pi использует процессоры ARM. На Raspberry Pi р
 Linux обычно предлагается как часть предложения «Инфраструктура как услуга» (IaaS). Экземпляры IaaS - это виртуальные машины, которые подготавливаются в облаке за считанные минуты. При запуске экземпляра IaaS выбирается образ, содержащий данные, развернутые в новом экземпляре. Облачные провайдеры предлагают различные образы, содержащие готовые к запуску установки как популярных дистрибутивов Linux, так и собственных версий Linux. Пользователь облака выбирает образ, содержащий предпочтительный дистрибутив, и вскоре может получить доступ к экземпляру облака, на котором запущен этот дистрибутив. Большинство поставщиков облачных услуг добавляют к своим изображениям инструменты, чтобы настроить установку для конкретного экземпляра облака. Эти инструменты могут, например, расширить файловые системы образа, чтобы они соответствовали реальному жесткому диску виртуальной машины.
 </p>
 
-# Упражнения
+# Упражнения для закрепления
 
 1. Чем Debian GNU / Linux отличается от Ubuntu? Назовите два аспекта.
 
@@ -93,7 +93,7 @@ Linux обычно предлагается как часть предложен
 5. Объясните три основных преимущества облачных вычислений.
 
 
-# Расширенные упражнения
+# Упражнения на размышления
 
 1. Учитывая стоимость и производительность, какие дистрибутивы наиболее подходят для бизнеса, который стремится снизить затраты на лицензирование при сохранении максимальной производительности? Объяснить, почему.
 
