Update 1.1 Урок 1.md

--- a/Linux Essentials/Topic1: The Linux Community and a Career in Open Source/1.1 Урок 1.md
+++ b/Linux Essentials/Topic1: The Linux Community and a Career in Open Source/1.1 Урок 1.md
@@ -115,7 +115,7 @@ Linux обычно предлагается как часть предложен
 * Какую роль Linux играет в облачных вычислениях
 
 
-# Ответы на упражнения
+# Ответы на упражнения для закрепления
 <p align="justify">
 1. Чем Debian GNU / Linux отличается от Ubuntu? Назовите два аспекта.
 </p>
@@ -144,9 +144,9 @@ Ubuntu основан на Debian, поэтому между ними много
 Основными преимуществами облачных вычислений являются гибкость, простота восстановления и низкая стоимость использования. Облачные сервисы легко внедрять и масштабировать в зависимости от бизнес-требований. Он имеет большое преимущество в решениях для резервного копирования и восстановления, поскольку позволяет предприятиям восстанавливаться после инцидентов быстрее и с меньшими последствиями. Кроме того, это снижает эксплуатационные расходы, поскольку позволяет оплачивать только те ресурсы, которые использует бизнес, по модели на основе подписки.
 </p>
 
-# Ответы на расширенные упражнения
+# Ответы на упражнения для размышления
 <p align="justify">
-1. Учитывая стоимость и производительность, какие дистрибутивы наиболее подходят для бизнеса, который стремится снизить затраты на лицензирование при сохранении максимальной производительности? Объяснить, почему.
+1. Учитывая стоимость и производительность, какие дистрибутивы наиболее подходят для бизнеса, которые стремятся снизить затраты на лицензирование при сохранении максимальной производительности? Объяснить, почему.
 </p>
 <p align="justify">
 CentOS - один из наиболее подходящих дистрибутивов для использования в бизнесе. Это потому, что он включает в себя все продукты Red Hat, которые в дальнейшем используются в их коммерческих операционных системах, но при этом являются бесплатными. Точно так же выпуски Ubuntu LTS гарантируют поддержку в течение более длительного периода времени. Стабильные версии Debian GNU / Linux также часто используются в корпоративных средах.
