Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -1,11 +1,11 @@
 # 101.1 Урок 1
 
-| Сертификат :  |LPIC-1                                                |
-|:--------------|:-----------------------------------------------------|
-| Версия :      | 5.0                                                  |
-| Тема :        | 101 Системная архитектура                            |
-| Цель:         | 101.1 Определение и настройка параметров оборудования|
-| Урок:         | 1 из 1                                               |
+| Сертификат:   |LPIC-1                                                 |
+|:--------------|:------------------------------------------------------|
+| Версия:       | 5.0                                                   |
+| Тема:         | 101 Системная архитектура                             |
+| Цель:         | 101.1 Определение и настройка параметров оборудования |
+| Урок:         | 1 из 1                                                |
 
 # Введение
 
@@ -27,3 +27,17 @@
 цели.
 
 > Дополнительные сведения о сходствах и различиях между BIOS и UEFI будут рассмотрены в следующем уроке.
+
+
+# Активация устройств
+
+Утилита настройки системы открывается после нажатия определенной клавиши при включении компьютера. Выбор кнопки зависит от производителя, но обычно это Del или одна из функциональных клавиш, например F2 или F12. Используемая комбинация клавиш часто отображается на экране включения.
+
+В программе настройки BIOS можно включать и отключать встроенные периферийные устройства, активировать базовую защиту от ошибок и изменять параметры оборудования, такие как IRQ (запрос прерывания) и DMA (прямой доступ к памяти). Изменение этих настроек редко требуется на современных машинах, но может потребоваться внести коррективы для решения конкретных проблем. Например, есть технологии RAM, которые совместимы с более высокими скоростями передачи данных, чем значения по умолчанию, поэтому рекомендуется изменить их на значения, рекомендуемые производителем. Некоторые процессоры предлагают функции, которые могут не потребоваться для конкретной установки и могут быть отключены. Отключенные функции снизят энергопотребление и могут повысить защиту системы, поскольку функции ЦП, содержащие известные ошибки, также могут быть отключены.
+
+Если машина оборудована множеством устройств хранения, важно определить, какое из них имеет правильный загрузчик и должно быть первой записью в порядке загрузки устройства. Операционная система может не загрузиться, если неправильное устройство отображается первым в списке загрузки BIOS.
+
+
+# Проверка устройств в Linux
+
+После того, как устройства будут правильно идентифицированы, операционная система должна связать необходимые им программные компоненты. Когда новое устройство не работает должным образом, важно определить, где именно возникла проблема. Когда аппаратное обеспечение не обнаруживается операционной системой, наиболее вероятно, что этот компонент или порт, к которому он подключен, неисправен.
