Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -40,4 +40,30 @@
 
 # Проверка устройств в Linux
 
-После того, как устройства будут правильно идентифицированы, операционная система должна связать необходимые им программные компоненты. Когда новое устройство не работает должным образом, важно определить, где именно возникла проблема. Когда аппаратное обеспечение не обнаруживается операционной системой, наиболее вероятно, что этот компонент или порт, к которому он подключен, неисправен.
+После того, как устройства будут правильно идентифицированы, операционная система должна связать необходимые им программные компоненты. Когда новое устройство не работает должным образом, важно определить, где именно возникла проблема. Когда аппаратное обеспечение не обнаруживается операционной системой, наиболее вероятно, что этот компонент или порт, к которому он подключен, неисправен. Если аппаратная часть определена правильно, но по-прежнему не работает должным образом, возможно, проблема связана с операционной системой. Поэтому одним из первых шагов при решении проблем, связанных с оборудованием, является проверка того, правильно ли операционная система определяет устройство. Есть два основных способа идентифицировать аппаратные ресурсы в системе Linux: использовать специализированные команды или читать определенные файлы внутри специальных файловых систем.
+
+
+# Комманды для проверки 
+
+Две основные команды для идентификации подключенных устройств в системе Linux:
+
+*lspci*
+>Показывает все устройства, подключенные в данный момент к шине PCI (Peripheral Component Interconnect). Устройства PCI могут быть либо компонентом, прикрепленным к материнской плате, например контроллером диска, либо картой расширения, установленной в слот PCI, например внешней видеокартой.
+
+*lsusb*
+>Список устройств USB (универсальная последовательная шина), подключенных к ПК в данный момент. Хотя существуют USB-устройства практически для любых мыслимых целей, интерфейс USB в основном используется для подключения устройств ввода - клавиатуры, указывающих устройств - и съемных носителей.
+
+Вывод команд *lspci* и *lsusb* состоит из списка всех устройств PCI и USB, идентифицированных операционной системой. Однако устройство может быть еще не полностью работоспособным, потому что для каждой части оборудования требуется программный компонент для управления соответствующим устройством. Этот программный компонент называется модулем ядра и может быть частью официального ядра Linux или добавлен отдельно из других источников.
+
+Модули ядра Linux, относящиеся к аппаратным устройствам, также называются драйверами, как и в других операционных системах. Однако драйверы для Linux не всегда поставляются производителем устройства. Хотя некоторые производители предоставляют свои собственные бинарные драйверы для отдельной установки, многие драйверы написаны независимыми разработчиками. Исторически сложилось так, что части, которые работают в Windows, например, могут не иметь аналога модуля ядра для Linux. В настоящее время операционные системы на базе Linux имеют сильную аппаратную поддержку, и большинство устройств работают без особых усилий.
+
+Команды, непосредственно связанные с оборудованием, часто требуют для выполнения прав root или будут отображать только ограниченную информацию при выполнении обычным пользователем, поэтому может потребоваться войти в систему как root или выполнить команду с помощью sudo.
+
+Следующий вывод команды lspci, например, показывает несколько идентифицированных устройств:
+>$ lspci
+>01:00.0 VGA compatible controller: NVIDIA Corporation GM107 [GeForce GTX 750 Ti] (rev a2)
+>04:02.0 Network controller: Ralink corp. RT2561/RT61 802.11g PCI
+>04:04.0 Multimedia audio controller: VIA Technologies Inc. ICE1712 [Envy24] PCI Multi-Channel I/O Controller (rev 02)
+>04:0b.0 FireWire (IEEE 1394): LSI Corporation FW322/323 [TrueFire] 1394a Controller (rev 70)
+
+
