Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -60,10 +60,11 @@
 Команды, непосредственно связанные с оборудованием, часто требуют для выполнения прав root или будут отображать только ограниченную информацию при выполнении обычным пользователем, поэтому может потребоваться войти в систему как root или выполнить команду с помощью sudo.
 
 Следующий вывод команды lspci, например, показывает несколько идентифицированных устройств:
->$ lspci
->01:00.0 VGA compatible controller: NVIDIA Corporation GM107 [GeForce GTX 750 Ti] (rev a2)
->04:02.0 Network controller: Ralink corp. RT2561/RT61 802.11g PCI
->04:04.0 Multimedia audio controller: VIA Technologies Inc. ICE1712 [Envy24] PCI Multi-Channel I/O Controller (rev 02)
->04:0b.0 FireWire (IEEE 1394): LSI Corporation FW322/323 [TrueFire] 1394a Controller (rev 70)
-
+```
+$ lspci
+01:00.0 VGA compatible controller: NVIDIA Corporation GM107 [GeForce GTX 750 Ti] (rev a2)
+04:02.0 Network controller: Ralink corp. RT2561/RT61 802.11g PCI
+04:04.0 Multimedia audio controller: VIA Technologies Inc. ICE1712 [Envy24] PCI Multi-Channel I/O Controller (rev 02)
+04:0b.0 FireWire (IEEE 1394): LSI Corporation FW322/323 [TrueFire] 1394a Controller (rev 70)
+```
 
