Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -67,4 +67,13 @@ $ lspci
 04:04.0 Multimedia audio controller: VIA Technologies Inc. ICE1712 [Envy24] PCI Multi-Channel I/O Controller (rev 02)
 04:0b.0 FireWire (IEEE 1394): LSI Corporation FW322/323 [TrueFire] 1394a Controller (rev 70)
 ```
-
+Вывод таких команд может состоять из десятков строк, поэтому предыдущий и следующий примеры содержат только интересующие их разделы. Шестнадцатеричные числа в начале каждой строки - это уникальные адреса соответствующего устройства PCI. Команда lspci показывает более подробную информацию о конкретном устройстве, если его адрес указан с параметром -s вместе с параметром -v:
+```
+$ lspci -s 04:02.0 -v
+04:02.0 Network controller: Ralink corp. RT2561/RT61 802.11g PCI
+    Subsystem: Linksys WMP54G v4.1
+    Flags: bus master, slow devsel, latency 32, IRQ 21
+    Memory at e3100000 (32-bit, non-prefetchable) [size=32K]
+    Capabilities: [40] Power Management version 2
+    kernel driver in use: rt61pci
+ ```
