Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -77,3 +77,66 @@ $ lspci -s 04:02.0 -v
     Capabilities: [40] Power Management version 2
     kernel driver in use: rt61pci
  ```
+Теперь в выходных данных отображается гораздо больше деталей устройства по адресу 04: 02.0. Это сетевой контроллер, внутреннее имя которого - Ralink corp. RT2561/RT61 802.11g PCI. Подсистема связана с маркой и моделью устройства - Linksys WMP54G v4.1 - и может быть полезна для диагностических целей.
+
+Модуль ядра можно определить в строке используемого драйвера ядра, которая показывает модуль rt61pci. Исходя из всей собранной информации, можно предположить, что:
+1. Устройство было идентифицировано. 
+2. Был загружен соответствующий модуль ядра. 
+3. Устройство готово к работе.
+
+Другой способ проверить, какой модуль ядра используется для указанного устройства, - это опция -k, доступная в более поздних версиях lspci:
+```
+$ lspci -s 01:00.0 -k
+01:00.0 VGA compatible controller: NVIDIA Corporation GM107 [GeForce GTX 750 Ti] (rev a2)
+   kernel driver in use: nvidia
+   kernel modules: nouveau, nvidia_drm, nvidia
+```
+Для выбранного устройства, платы NVIDIA GPU, lspci сообщает, что используемый модуль называется nvidia, в строке используется драйвер ядра: nvidia и все соответствующие модули ядра перечислены в строке модулей ядра: nouveau, nvidia_drm, nvidia.
+
+Команда lsusb похожа на lspci, но перечисляет исключительно информацию USB:
+```
+$ lsusb
+Bus 001 Device 029: ID 1781:0c9f Multiple Vendors USBtiny
+Bus 001 Device 028: ID 093a:2521 Pixart Imaging, Inc. Optical Mouse
+Bus 001 Device 020: ID 1131:1001 Integrated System Solution Corp. KY-BT100 Bluetooth Adapter
+Bus 001 Device 011: ID 04f2:0402 Chicony Electronics Co., Ltd Genius LuxeMate i200 Keyboard
+Bus 001 Device 007: ID 0424:7800 Standard Microsystems Corp.
+Bus 001 Device 003: ID 0424:2514 Standard Microsystems Corp. USB 2.0 Hub
+Bus 001 Device 002: ID 0424:2514 Standard Microsystems Corp. USB 2.0 Hub
+Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
+```
+Команда lsusb показывает доступные каналы USB и подключенные к ним устройства. Как и в случае с lspci, опция -v отображает более подробный вывод. Конкретное устройство можно выбрать для проверки, указав его идентификатор в опции -d:
+```
+$ lsusb -v -d 1781:0c9f
+Bus 001 Device 029: ID 1781:0c9f Multiple Vendors USBtiny
+Device Descriptor:
+  bLength                18
+  bDescriptorType         1
+  bcdUSB               1.01
+  bDeviceClass          255 Vendor Specific Class
+  bDeviceSubClass         0
+  bDeviceProtocol         0
+  bMaxPacketSize0         8
+  idVendor           0x1781 Multiple Vendors
+  idProduct          0x0c9f USBtiny
+  bcdDevice            1.04
+  iManufacturer           0
+  iProduct                2 USBtiny
+  iSerial                 0
+  bNumConfigurations      1
+```
+С параметром -t команда lsusb показывает текущие сопоставления USB-устройств в виде иерархического дерева:
+```
+$ lsusb -t
+/:  Bus 01.Port 1: Dev 1, Class=root_hub, Driver=dwc_otg/1p, 480M
+    |__ Port 1: Dev 2, If 0, Class=Hub, Driver=hub/4p, 480M
+        |__ Port 1: Dev 3, If 0, Class=Hub, Driver=hub/3p, 480M
+            |__ Port 2: Dev 11, If 1, Class=Human Interface Device, Driver=usbhid, 1.5M
+            |__ Port 2: Dev 11, If 0, Class=Human Interface Device, Driver=usbhid, 1.5M
+            |__ Port 3: Dev 20, If 0, Class=Wireless, Driver=btusb, 12M
+            |__ Port 3: Dev 20, If 1, Class=Wireless, Driver=btusb, 12M
+            |__ Port 3: Dev 20, If 2, Class=Application Specific Interface, Driver=, 12M
+            |__ Port 1: Dev 7, If 0, Class=Vendor Specific Class, Driver=lan78xx, 480M
+        |__ Port 2: Dev 28, If 0, Class=Human Interface Device, Driver=usbhid, 1.5M
+        |__ Port 3: Dev 29, If 0, Class=Vendor Specific Class, Driver=, 1.5M
+```
