Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -140,3 +140,89 @@ $ lsusb -t
         |__ Port 2: Dev 28, If 0, Class=Human Interface Device, Driver=usbhid, 1.5M
         |__ Port 3: Dev 29, If 0, Class=Vendor Specific Class, Driver=, 1.5M
 ```
+Возможно, не со всеми устройствами связаны соответствующие модули. Связь с определенными устройствами может осуществляться приложением напрямую, без посредничества, обеспечиваемого модулем. Тем не менее, вывод lsusb -t содержит важную информацию. Когда соответствующий модуль существует, его имя появляется в конце строки для устройства, как в Driver = btusb. Устройство Class определяет общую категорию, например, Human Interface Device, Wireless, Vendor Specific Class, Mass Storage и другие. Чтобы проверить, какое устройство использует модуль btusb, представленный в предыдущем листинге, необходимо указать номера Bus и Dev в параметре -s команды lsusb:
+```
+$ lsusb -s 01:20
+Bus 001 Device 020: ID 1131:1001 Integrated System Solution Corp. KY-BT100 Bluetooth Adapter
+```
+Обычно в стандартной системе Linux всегда есть большой набор загруженных модулей ядра. Предпочтительный способ взаимодействия с ними - использовать команды, предоставляемые пакетом kmod, который представляет собой набор инструментов для обработки общих задач с модулями ядра Linux, таких как вставка, удаление, список, проверка свойств, разрешение зависимостей и псевдонимов. Например, команда lsmod показывает все загруженные в данный момент модули:
+```
+$ lsmod
+Module                  Size  Used by
+kvm_intel             138528  0
+kvm                   421021  1 kvm_intel
+iTCO_wdt               13480  0
+iTCO_vendor_support    13419  1 iTCO_wdt
+snd_usb_audio         149112  2
+snd_hda_codec_realtek  51465  1
+snd_ice1712            75006  3
+snd_hda_intel          44075  7
+arc4                   12608  2
+snd_cs8427             13978  1 snd_ice1712
+snd_i2c                13828  2 snd_ice1712,snd_cs8427
+snd_ice17xx_ak4xxx     13128  1 snd_ice1712
+snd_ak4xxx_adda        18487  2 snd_ice1712,snd_ice17xx_ak4xxx
+microcode              23527  0
+snd_usbmidi_lib        24845  1 snd_usb_audio
+gspca_pac7302          17481  0
+gspca_main             36226  1 gspca_pac7302
+videodev              132348  2 gspca_main,gspca_pac7302
+rt61pci                32326  0
+rt2x00pci              13083  1 rt61pci
+media                  20840  1 videodev
+rt2x00mmio             13322  1 rt61pci
+hid_dr                 12776  0
+snd_mpu401_uart        13992  1 snd_ice1712
+rt2x00lib              67108  3 rt61pci,rt2x00pci,rt2x00mmio
+snd_rawmidi            29394  2 snd_usbmidi_lib,snd_mpu401_uart
+```
+Вывод команды lsmod разделен на три столбца:
+Module
+>Название модуля. 
+Size 
+>Объем оперативной памяти, занятой модулем, в байтах. 
+Used by 
+>Зависимости от модулей.
+
+Некоторым модулям для правильной работы требуются другие модули, как в случае с модулями для аудиоустройств:
+```
+$ lsmod | fgrep -i snd_hda_intel
+snd_hda_intel          42658  5
+snd_hda_codec         155748  3 snd_hda_codec_hdmi,snd_hda_codec_via,snd_hda_intel
+snd_pcm                81999  3 snd_hda_codec_hdmi,snd_hda_codec,snd_hda_intel
+snd_page_alloc         13852  2 snd_pcm,snd_hda_intel
+snd                    59132  19 snd_hwdep,snd_timer,snd_hda_codec_hdmi,snd_hda_codec_via,snd_pcm,snd_seq,snd_hda_codec,snd_hda_intel,snd_seq_device
+```
+В третьем столбце Used by показаны модули, которым для правильной работы требуется модуль из первого столбца. Многие модули звуковой архитектуры Linux с префиксом snd взаимозависимы. При поиске проблем во время диагностики системы может быть полезно выгрузить определенные модули, загруженные в данный момент. Команда modprobe может использоваться как для загрузки, так и для выгрузки модулей ядра: для выгрузки модуля и связанных с ним модулей, если они не используются запущенным процессом, следует использовать команду modprobe -r. Например, чтобы выгрузить модуль snd-hda-intel (модуль для аудиоустройства HDA Intel) и другие модули, относящиеся к звуковой системе:
+```
+# modprobe -r snd-hda-intel
+```
+В дополнение к загрузке и выгрузке модулей ядра во время работы системы, можно изменять параметры модуля во время загрузки ядра, не так сильно отличается от передачи параметров командам. Каждый модуль принимает определенные параметры, но в большинстве случаев рекомендуются значения по умолчанию, а дополнительные параметры не требуются. Однако в некоторых случаях необходимо использовать параметры, чтобы изменить поведение модуля, чтобы он работал должным образом. 
+
+Используя имя модуля в качестве единственного аргумента, команда modinfo показывает описание, файл, автора, лицензию, идентификацию, зависимости и доступные параметры для данного модуля. Настроенные параметры для модуля можно сделать постоянными, включив их в файл /etc/modprobe.conf или в отдельные файлы с расширением .conf в каталоге /etc/modprobe.d/. Опция -p заставит команду modinfo отображать все доступные параметры и игнорировать другую информацию:
+```
+# modinfo -p nouveau
+vram_pushbuf:Create DMA push buffers in VRAM (int)
+tv_norm:Default TV norm.
+                Supported: PAL, PAL-M, PAL-N, PAL-Nc, NTSC-M, NTSC-J,
+                        hd480i, hd480p, hd576i, hd576p, hd720p, hd1080i.
+                Default: PAL
+                NOTE Ignored for cards with external TV encoders. (charp)
+nofbaccel:Disable fbcon acceleration (int)
+fbcon_bpp:fbcon bits-per-pixel (default: auto) (int)
+mst:Enable DisplayPort multi-stream (default: enabled) (int)
+tv_disable:Disable TV-out detection (int)
+ignorelid:Ignore ACPI lid status (int)
+duallink:Allow dual-link TMDS (default: enabled) (int)
+hdmimhz:Force a maximum HDMI pixel clock (in MHz) (int)
+config:option string to pass to driver core (charp)
+debug:debug string to pass to driver core (charp)
+noaccel:disable kernel/abi16 acceleration (int)
+modeset:enable driver (default: auto, 0 = disabled, 1 = enabled, 2 = headless) (int)
+atomic:Expose atomic ioctl (default: disabled) (int)
+runpm:disable (0), force enable (1), optimus only default (-1) (int)
+```
+В выходных данных примера показаны все параметры, доступные для module nouveau, модуля ядра, предоставленного Nouveau Project в качестве альтернативы проприетарным драйверам для карт NVIDIA GPU. Например, параметр modeset позволяет контролировать, будут ли разрешение и глубина отображения устанавливаться в пространстве ядра, а не в пространстве пользователя. Добавление параметров nouveau modeset = 0 в файл /etc/modprobe.d/nouveau.conf отключит функцию ядра modeset.
+
+Если модуль вызывает проблемы, файл /etc/modprobe.d/blacklist.conf можно использовать для блокировки загрузки модуля. Например, чтобы предотвратить автоматическую загрузку модуля nouveau, необходимо добавить строку blacklist nouveau в файл /etc/modprobe.d/blacklist.conf. Это действие требуется, если установлен проприетарный модуль nvidia и модуль nouveau по умолчанию следует отключить.
+>Вы можете изменить файл /etc/modprobe.d/blacklist.conf, который уже существует в >системе по умолчанию. Однако предпочтительным методом является создание отдельного >файла конфигурации, /etc/modprobe.d/ <module_name> .conf, который будет содержать >настройки, специфичные только для данного модуля ядра.
