Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -225,4 +225,4 @@ runpm:disable (0), force enable (1), optimus only default (-1) (int)
 В выходных данных примера показаны все параметры, доступные для module nouveau, модуля ядра, предоставленного Nouveau Project в качестве альтернативы проприетарным драйверам для карт NVIDIA GPU. Например, параметр modeset позволяет контролировать, будут ли разрешение и глубина отображения устанавливаться в пространстве ядра, а не в пространстве пользователя. Добавление параметров nouveau modeset = 0 в файл /etc/modprobe.d/nouveau.conf отключит функцию ядра modeset.
 
 Если модуль вызывает проблемы, файл /etc/modprobe.d/blacklist.conf можно использовать для блокировки загрузки модуля. Например, чтобы предотвратить автоматическую загрузку модуля nouveau, необходимо добавить строку blacklist nouveau в файл /etc/modprobe.d/blacklist.conf. Это действие требуется, если установлен проприетарный модуль nvidia и модуль nouveau по умолчанию следует отключить.
->Вы можете изменить файл /etc/modprobe.d/blacklist.conf, который уже существует в >системе по умолчанию. Однако предпочтительным методом является создание отдельного >файла конфигурации, /etc/modprobe.d/ <module_name> .conf, который будет содержать >настройки, специфичные только для данного модуля ядра.
+>Вы можете изменить файл /etc/modprobe.d/blacklist.conf, который уже существует в системе по умолчанию. Однако предпочтительным методом является создание отдельного файла конфигурации, /etc/modprobe.d/ <module_name> .conf, который будет содержать настройки, специфичные только для данного модуля ядра.
